created a simple html page

--- a/about_me.html
+++ b/about_me.html
@@ -11,6 +11,6 @@
     <body>
        <h1>About Marissa</h1>
         <p>This is a paragrph about me! I love music and play two instruments which are the piano and flute.
-             I have been playing classical piano for 12 years now.  </p>
+             I have been playing classical piano for 12 years now. My family is from Cuba and I'm also a twin.</p>
     </body>
 </html>
